--- a/Midturm/css/style.css
+++ b/Midturm/css/style.css
@@ -7,7 +7,7 @@
 body {
     font-size: 100%;
 /*    background-color: #ccc;*/
-    background-image: url("../img/back.jpg") no-repeat center center fixed;;
+    background: url("../img/back.jpg");
 }
 
 #container {
