--- a/final/CHAOS/css/style.css
+++ b/final/CHAOS/css/style.css
@@ -12,31 +12,32 @@ body {
 #container {
     width: 98%;
     margin: auto;
-    background-color: rgb(253, 220, 222)
+    background-color: rgb(22,24,75);
 }
 
 h1 {
     font-family: 'Oswald', sans-serif;
     font-size: 3em;
-    color: rgb(9, 153, 178);
+    color: rgb(100, 183, 178);
     margin-bottom: 0px;
     padding-top: 2em;
     line-height: 1em;
     clear: both;
+    text-align: center;
 }
 
 
 /* h1,h2 is 48px*/
 
-h2,
-h3 {
+h2, h3 {
     margin: 0px;
     font-family: 'Oswald', sans-serif;
-}
+    color: rgb (150,200,154);
 
-h1,
-h2 {
+}
+ h2 {
     text-align: center;
+    color: rgb (150,200,154);
 }
 
 figure {
@@ -75,7 +76,7 @@ header p {
 
 p.director {
     font-family: 'Oswald', sans-serif;
-    color: #000000;
+    color: #499955;
 }
 
 .fixed {
@@ -103,7 +104,7 @@ p.director {
     float: left;
     width: 100%;
     font-family: Oswald, sans-serif;
-    background-color: rgb(255, 0, 113);
+    background-color: rgb(60,65,90);
     margin-bottom: .5em;
     font-size: 1.5em;
 }
@@ -141,7 +142,7 @@ p.director {
 }
 
 .nav-toggle:before {
-    color: rgb(255, 0, 113);
+    color: rgb(180,255,183);
     /* Edit this to change the icon color */
     font-family: "responsivenav", sans-serif;
     font-style: normal;
